HelpMePlay | 1.0.9
	New Features:
		- Added a 'Disable All' button to quickly disable the addon's functionality without reloading the UI.
	Dialog:
		- Added multiple dialogs for Mardum.
	Talents:
		- Changed the suggested level 50 talent for Vengeance Demon Hunter from Last Resort to Bulk Extraction.
	Changes:
		- The Chromie Time text box has been converted to a dropdown menu.
		- When the Threads of Fate option is disabled in the settings, Story is no longer chosen automatically.