@@ -172,6 +172,7 @@ if (locale == "enGB" or locale == "enUS") then
 	L["Let's ride."]															= "Let's ride."
 	L["The forces of Mueh'zala have invaded Ardenweald."]						= "The forces of Mueh'zala have invaded Ardenweald."
 	L["Evacuate, now!"]															= "Evacuate, now!"
+	L["Yes."]																	= "Yes."
 	L["Yes!"]																	= "Yes!"
 	L["Quest"]																	= "Quest"
 	L["Show me my Renown."]														= "Show me my Renown."
@@ -187,6 +188,7 @@ if (locale == "enGB" or locale == "enUS") then
 	L["Are you sure you want to give this hobo money?"]							= "Are you sure you want to give this hobo money?"
 	L["I need a ride."]															= "I need a ride."
 	L["D'kaan is coming with help."]											= "D'kaan is coming with help."
+	L["Your presence is requested immediately at Provis Terra."]				= "Your presence is requested immediately at Provis Terra."
 	L["Daelya Twilightsbane 1"]													= "What does the Light wish of me?"
 	L["Daelya Twilightsbane 2"]													= "I will do my best to serve the Light. I swear to it."
 	L["Herbert Gloomburst 1"]													= "I'll fight the harpies that come."
@@ -405,6 +407,14 @@ if (locale == "enGB" or locale == "enUS") then
 	L["Altar of the Pained 1"]													= "Put on the Faceless Mask of the Pained."
 	L["Altar of the Burned Bridge 1"]											= "Put on the Faceless Mask of the Burned Bridge."
 	L["Altar of the Long Night 1"]												= "Put on the Faceless Mask of the Long Night."
+	L["Elder Kreth 1"]															= "We have arrived from Oribos in pursuit of the Jailer."
+	L["Elder Kreth 2"]															= "You are no longer safe here."
+	L["Elder Kreth 3"]															= "Pelagos speaks the truth."
+	L["Varoun 1"]																= "The portal to Oribos is open."
+	L["Avna 1"]																	= "Your Cartel Al friends miss you."
+	L["Custodian Kalir 1"]														= "Don't you know that you're in danger here?"
+	L["Tamra 1"]																= "<Give the flowers to Tamra.>"
+	L["Firim 1"]																= "<Tell Firim about the oracle.>"
 	-- Creature Names
 	L["Sylla"]																	= "Sylla"
 	L["Thenia"]																	= "Thenia"
